# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("../../../soc_perf.gni")
import("//build/config/features.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("LxjRUCFuzzTest") {
  module_out_path = "soc_perf/soc_perf"

  include_dirs = [
    "//foundation/resourceschedule/soc_perf/interfaces/inner_api/socperf_client/include",
    "//foundation/resourceschedule/soc_perf/common/include",
  ]
  cflags = ["-g","-O0","-Wno-unused-variable","-fno-omit-frame-pointer"]
  sources = [
    "lxjRUC_fuzzer.cpp",
  ]
  deps = [
    "//foundation/resourceschedule/soc_perf/interfaces/inner_api/socperf_client:socperf_client",
  ]

  external_deps = [
    "c_utils:utils", 
    "bounds_checking_function:libsec_shared",
  ]

}
###############################################################################
group("fuzztest") {
  testonly = true
  deps = [
    # deps file
    ":LxjRUCFuzzTest",
  ]
}
###############################################################################
