# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")

ohos_fuzztest("SocperfClientFuzzTest") {
  module_out_path = "soc_perf/soc_perf"
  fuzz_config_file = "//foundation/resourceschedule/soc_perf/test/fuzztest/soc_fuzzer"

  include_dirs = [
    "//foundation/resourceschedule/soc_perf/interfaces/inner_api/socperf_client/include",
    "//foundation/resourceschedule/soc_perf/common/include",
    "//foundation/resourceschedule/soc_perf/services/server/include",
    "//foundation/resourceschedule/soc_perf/services/core/include",
    "//foundation/resourceschedule/soc_perf/services/dfx/include",
    "//foundation/resourceschedule/soc_perf/test/fuzztest/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "socperfclient_fuzzer.cpp",
  ]

  deps = [
    "//foundation/resourceschedule/soc_perf/interfaces/inner_api/socperf_client:socperf_client",
    "//foundation/resourceschedule/soc_perf/services:socperf_server_static",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "access_token:libtokenid_sdk",
    "cJSON:cjson_static",
    "c_utils:utils",
    "config_policy:configpolicy_util",
    "ffrt:libffrt",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "hisysevent:libhisysevent",
    "init:libbegetutil",
    "ipc:ipc_single",
    "json:nlohmann_json_static",
    "libxml2:libxml2",
    "resource_schedule_service:resschedexe_client",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "selinux_adapter:librestorecon",
  ]
}
###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":SocperfClientFuzzTest",
  ]
}
###############################################################################
